# Lambdora

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  astmodule.py  build_lambdora.py  builtinsmodule.py  coverage.xml  deploy.sh  evaluator.py  index.html  lambdora_bundle.py  macro.py  main.py  mkdocs.yml  package.json  parser.py  printer.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  script.js  styles.css  tokenizer.py  values.py
.github/workflows/: test.yml
docs/: advanced.md  api.md  index.md  repl.md
examples/: church_numerals.lamb  fizzbuzz.lamb  macro_demos.lamb  recursion.lamb
lambdora/: astmodule.py  builtinsmodule.py  evaluator.py  macro.py  main.py  parser.py  printer.py  tokenizer.py  values.py
lambdora/stdlib/: std.lamb
scripts/: clean.py
src/lambdora/: astmodule.py  builtinsmodule.py  errors.py  evaluator.py  macro.py  parser.py  printer.py  repl.py  runner.py  tokenizer.py  values.py
src/lambdora/stdlib/: std.lamb
stdlib/: std.lamb
tests/: conftest.py  test_builtins.py  test_errors.py  test_eval.py  test_letrec_basic.py  test_letrec_error.py  test_macros.py  test_parser.py  test_quote.py  test_repl.py  test_runner.py  test_runner_basic.py  test_stdlib.py  test_tokenizer.py  test_values.py
