[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lambdora"
version = "0.1.0"
description = "A minimalist Lisp-inspired language"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Felipe", email = "you@example.com"}]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I"]   # basic lint + import sorting

[tool.mypy]
strict = true
ignore_missing_imports = true
